--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+			
+			<!-- Redis y cache -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-redis</artifactId>
+			</dependency>
 
             <!-- Plugin para empaquetar la app -->
             <plugin>
