--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ server.port=8082
 
 # Timezone (opcional)
 spring.jackson.time-zone=America/La_Paz
+
+# Redis
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
