--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,17 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+		<!-- Soporte para LocalDate en Jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 
+		<!-- Redis y cache -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-redis</artifactId>
+			</dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -127,12 +137,8 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
 			
-			<!-- Redis y cache -->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-data-redis</artifactId>
-			</dependency>
 
             <!-- Plugin para empaquetar la app -->
             <plugin>
